[package]
name = "wasm-python-sandbox-rs"
version = "0.1.0"
edition = "2021"
description = "Secure Python execution in WebAssembly isolation"
license = "MIT"

[lib]
name = "wasm_python_sandbox_rs"
path = "src/lib.rs"

[dependencies]
wasmtime = "27"
wasmtime-wasi = "27"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
